Update background image Src

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/gradient.png);
+    background-image: url(https://vajraadityavijay.github.io/Number_Info/gradient.png);
     padding: 5vh 5vh 5vh 5vh;
     background-size: 100% 100vh;
 }
