--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body{
-    background-image: url(https://vajraadityavijay.github.io/Number_Info/gradient.png);
+    background-image: url(/gradient.png);
     padding: 5vh 5vh 5vh 5vh;
     background-size: 100% 100vh;
 }
 
 form{
     text-align: center;
-    margin-top: 30vh;
+    margin-top: 18vh;
 }
 
 input{
@@ -42,6 +42,9 @@ input{
 }
 .output2{
     margin-top: 4vh;
+}
+.output3{
+    margin-top: 6vh;
 }
 
 input[type=number]::-webkit-inner-spin-button,
